--- a/css/styles.css
+++ b/css/styles.css
@@ -1,62 +1,157 @@
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 300;
+  src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 600;
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-weight: 900;
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2');
+}
+
 :root {
-    --color-brend-light: #819B57;
-    --color-brend-dark: #465929;
-    --color-primery-light: #FAF4EA;
-    --color-primery-dark: #31261A;
+  --color-brend-light: #819B57;
+  --color-brend-dark: #465929;
+  --color-primery-light: #FAF4EA;
+  --color-primery-dark: #31261A;
+  --color-footer-copyright: #A18268;
 }
 
 /* Base styles */
 body {
-    color: var(--color-primery-dark);
+  color: var(--color-primery-dark);
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+address {
+  font-style: normal;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
-/* Navigation styles */
+/* Navigation */
 .nav-link {
-    color: var(--color-primery-light);
+  color: var(--color-primery-light);
+  text-decoration: none;
 }
 
 .nav-link:hover {
-    color: var(--color-brend-light);
-    cursor: pointer;
+  color: var(--color-brend-light);
+  font-weight: 600;
+  cursor: pointer;
 }
 
-/* Button styles */
+/* Button */
 .btn {
-    color: var(--color-primery-light);
-    background-color: var(--color-brend-light);
-    border: 2px solid var(--color-brend-light);
-    border-radius: 8px;
+  color: var(--color-primery-light);
+  font-weight: 600;
+  background-color: var(--color-brend-light);
+  border: 2px solid var(--color-brend-light);
+  border-radius: 8px;
 }
 
 .btn:hover {
-    background-color: transparent;
-    color: var(--color-brend-dark);
-    cursor: pointer;
+  background-color: transparent;
+  color: var(--color-brend-dark);
+  cursor: pointer;
 }
 
-/* Hero section styles */
+/* Hero section */
 .hero-title {
-    color: var(--color-primery-light);
+  color: var(--color-primery-light);
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
 }
 
 .hero-title .accent {
-    color: var(--color-brend-light);
+  color: var(--color-brend-light);
 }
 
-/* Advantages list styles */
+/* Traditions section */
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
+
+/* Advantages list */
 .advantages-list {
-    background-color: var(--color-brend-light);
-    color: var(--color-primery-light);
+  background-color: var(--color-brend-light);
+  color: var(--color-primery-light);
+}
+
+.advantages-list-item {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.traditions-text .brand {
+  color: var(--color-brend-light);
+  font-weight: 600;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+/* Chefs section */
+.chefs-title {
+  font-size: 40px;
+  font-weight: 600;
 }
 
 .section-title .accent {
-    color: var(--color-brend-dark);
+  color: var(--color-brend-dark);
 }
 
-span.accent {
-    color: var(--color-brend-light);
+/* Formats section */
+.formats-title {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.formats-text {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+/* Footer */
+.address-link {
+  color: var(--color-primery-light);
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.address-link:hover {
+  color: var(--color-brend-light);
+  cursor: pointer;
+}
+
+.address-copyright {
+  color: var(--color-footer-copyright);
+  font-size: 14px;
 }
