--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,27 @@
 }
 
 /* Base styles */
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--color-primery-dark);
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
 }
 
 address {
@@ -49,6 +64,27 @@ address {
 
 ul {
   list-style-type: none;
+  margin: 0;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 24px;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
 /* Navigation */
@@ -65,6 +101,7 @@ ul {
 
 /* Button */
 .btn {
+  padding: 16px 32px;
   color: var(--color-primery-light);
   font-weight: 600;
   background-color: var(--color-brend-light);
@@ -79,6 +116,10 @@ ul {
 }
 
 /* Hero section */
+.hero-section {
+  padding: 272px 0;
+}
+
 .hero-title {
   color: var(--color-primery-light);
   text-align: center;
@@ -91,10 +132,18 @@ ul {
 }
 
 /* Traditions section */
+.traditions-section {
+  padding-top: 96px;
+}
+
 .section-title {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
+}
+
+.traditions-title {
+  margin-bottom: 42px;
 }
 
 /* Advantages list */
@@ -118,7 +167,12 @@ ul {
 }
 
 /* Chefs section */
+.chefs-section-title {
+  margin-bottom: 80px;
+}
+
 .chefs-title {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
@@ -128,6 +182,10 @@ ul {
 }
 
 /* Formats section */
+.formats-section-title {
+  margin-bottom: 80px;
+}
+
 .formats-title {
   font-size: 24px;
   font-weight: 600;
@@ -136,6 +194,11 @@ ul {
 .formats-text {
   font-size: 14px;
   font-weight: 300;
+}
+
+/* Contacts section */
+.contacts-section-title {
+  margin-bottom: 16px;
 }
 
 /* Footer */
