--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,9 @@ address {
 }
 
 ul {
-  list-style-type: none;
   margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .section {
@@ -75,7 +76,7 @@ ul {
   width: 100%;
   max-width: 1288px;
   margin: 0 auto;
-  padding: 24px;
+  padding: 0 24px;
 }
 
 .visually-hidden {
@@ -88,14 +89,13 @@ ul {
 }
 
 /* Navigation */
-.nav-link {
+.menu-link {
   color: var(--color-primery-light);
   text-decoration: none;
 }
 
-.nav-link:hover {
+.menu-link:hover {
   color: var(--color-brend-light);
-  font-weight: 600;
   cursor: pointer;
 }
 
@@ -113,6 +113,27 @@ ul {
   background-color: transparent;
   color: var(--color-brend-dark);
   cursor: pointer;
+}
+
+/* Header */
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 24px;
+}
+
+.header-menu {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  gap: 64px;
 }
 
 /* Hero section */
@@ -136,6 +157,16 @@ ul {
   padding-top: 96px;
 }
 
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.traditions-content {
+  max-width: 710px;
+}
+
 .section-title {
   font-size: 64px;
   font-weight: 900;
@@ -146,13 +177,28 @@ ul {
   margin-bottom: 42px;
 }
 
+.traditions-text {
+  margin-bottom: 0;
+}
+
+.traditions-text:nth-child(2) {
+  margin-bottom: 42px;
+}
+
 /* Advantages list */
-.advantages-list {
+.advantages-section {
+  padding: 16px 0;
   background-color: var(--color-brend-light);
-  color: var(--color-primery-light);
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
 }
 
 .advantages-list-item {
+  color: var(--color-primery-light);
   font-size: 20px;
   font-weight: 300;
 }
@@ -189,6 +235,22 @@ ul {
 .formats-title {
   font-size: 24px;
   font-weight: 600;
+  margin-bottom: 16px;
+}
+
+.formats-card {
+  max-width: 310px;
+  border-radius: 16px;
+  padding: 4px 24px 24px 24px;
+}
+
+.formats-list {
+  display: flex;
+  gap: 20px;
+}
+
+.formats-list-item {
+  flex-basis: calc((100% - 40px) / 3);
 }
 
 .formats-text {
