--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,20 @@
   src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2');
 }
 
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto';
+  font-weight: 400;
+  src: url('../fonts/roboto-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Gilroy-Medium';
+  font-weight: 400;
+  src: local('Gilroy-Medium'), url('../fonts/gilroy-latin-medium.woff2') format('woff2');
+}
+
 :root {
   --color-brand-normal: #819B57;
   --color-brand-dark: #465929;
@@ -78,7 +92,7 @@ ul {
 }
 
 .section {
-  padding: 48px 0;
+  padding: 20px 0;
 }
 
 .container {
@@ -101,6 +115,7 @@ ul {
 .menu-link {
   color: var(--color-primery-light);
   text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .menu-link:hover {
@@ -110,6 +125,8 @@ ul {
 
 /* Button */
 .btn {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
   padding: 16px 32px;
   color: var(--color-primery-light);
   font-weight: 600;
@@ -125,6 +142,14 @@ ul {
 }
 
 /* Header */
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -148,7 +173,11 @@ ul {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
-  background-image: url('../images/hero-section-bg.jpg');
+  background-image: linear-gradient(102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%),
+    url('../images/hero-section-bg.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -228,17 +257,26 @@ ul {
 
 /* Chefs section */
 .chefs-section-title {
-  text-align: center;
-  max-width: 520px;
+  position: relative;
   margin: 0 auto 80px;
+  text-align: center;
 }
 
 .chefs-section-title::before,
 .chefs-section-title::after {
   content: '';
-  display: block;
+  position: absolute;
+  bottom: 24px;
   width: 352px;
   border: 2px solid var(--color-brand-light);
+}
+
+.chefs-section-title::before {
+  left: 0;
+}
+
+.chefs-section-title::after {
+  right: 0px;
 }
 
 .section-title .accent {
@@ -302,6 +340,11 @@ ul {
   height: 444px;
   border-radius: 16px;
   background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primery-dark) 100%);
+  transition: transform 0.3s ease;
+}
+
+.formats-card:hover {
+  transform: scale(1.05);
 }
 
 .formats-list {
@@ -339,6 +382,11 @@ ul {
   fill: var(--color-primery-light);
 }
 
+.carousel-button.next {
+  transform: rotate(180deg);
+}
+
+
 /* Contacts section */
 .contacts-section {
   padding-bottom: 96px;
@@ -361,12 +409,36 @@ ul {
 
 /* Footer */
 .footer {
+  position: relative;
   background-color: var(--color-primery-dark);
   background-image: url('../images/footer-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding: 32px 0;
+}
+
+.footer::before,
+.footer::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
+
+.footer::before {
+  width: 180px;
+  height: 120px;
+  left: 0;
+  background-image: url('../images/decor-bread-smal.png');
+}
+
+.footer::after {
+  width: 370px;
+  height: 180px;
+  right: 0;
+  background-image: url('../images/decor-bread-large.png');
 }
 
 .footer-container {
@@ -412,4 +484,114 @@ ul {
 .address-copyright {
   color: var(--color-secondary-dark);
   font-size: 14px;
+}
+
+/* Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 72px 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: relative;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
+  padding: 128px;
+  background-color: var(--color-primery-light);
+  border-radius: 32px;
+  overflow-y: auto;
+}
+
+.modal-btn-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+
+.modal-title {
+  font-weight: 900;
+  font-size: 64px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.modal-text {
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto 72px;
+  text-align: center;
+}
+
+/* Form */
+.form-field {
+  margin-bottom: 32px;
+}
+
+.form-label {
+  display: block;
+}
+
+.form-input {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.17;
+  padding: 16px 24px;
+  width: 100%;
+  border: 1px solid var(--color-secondary-dark);
+  border-radius: 8px;
+  background-color: var(--color-primery-light);
+}
+
+.form-input:focus {
+  border-color: var(--color-brand-normal);
+  outline: none;
+}
+
+.form-input::placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.17;
+  color: var(--color-secondary-dark);
+}
+
+.form-input:focus::placeholder {
+  color: var(--color-primery-dark);
+}
+
+.form-btn {
+  display: block;
+  margin: 0 auto 24px;
+}
+
+.form-terms {
+  font-family: 'Gilroy-Medium', sans-serif;
+  font-size: 12px;
+  line-height: 1.5;
+  font-weight: 500;
+  text-align: center;
+  max-width: 215px;
+  margin: 0 auto;
+}
+
+.form-terms-link {
+  color: var(--color-primery-dark);
+  text-decoration: underline;
+  text-underline-offset: 3px;
 }
